små rettelser done

--- a/drinkskort.html
+++ b/drinkskort.html
@@ -58,6 +58,53 @@
                     <ul>
                         <li>
                             <div class="menu_left">
+                                <p>Limoncello</p>
+                            </div>
+                            <hr class="menu_line" />
+                            <div class="menu_price">70,- DKK</div>
+                        </li>
+
+                        <li>
+                            <div class="menu_left">
+                                <p>8 Year Armagnac Domaine Horgelus</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">70,- DKK</div>
+                        </li>
+
+                        <li>
+                            <div class="menu_left">
+                                <p>12 Year Amagnac Domaine Horgelus</p>
+                            </div>
+                            <hr class="menu_line" />
+                            <div class="menu_price">90,- DKK</div>
+                        </li>
+
+                        <li>
+                            <div class="menu_left">
+                                <p>Port Tonic</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">90,- DKK</div>
+                        </li>
+
+                        <li>
+                            <div class="menu_left">
+                                <p>Moscow Mule</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">90,- DKK</div>
+                        </li>
+
+                        <li>
+                            <div class="menu_left">
+                                <p>Kir</p>
+                            </div>
+                            <hr class="menu_line">
+                            <div class="menu_price">90,- DKK</div>
+                        </li>
+                        <li>
+                            <div class="menu_left">
                                 <p>Aperol Spritz</p>
                             </div>
                             <hr class="menu_line">
@@ -82,11 +129,13 @@
 
                         <li>
                             <div class="menu_left">
-                                <p>Kir</p>
+                                <p>Gin & Tonic</p>
                             </div>
                             <hr class="menu_line">
-                            <div class="menu_price">90,- DKK</div>
+                            <div class="menu_price">100,- DKK</div>
                         </li>
+
+
 
                         <li>
                             <div class="menu_left">
@@ -95,21 +144,12 @@
                             <hr class="menu_line">
                             <div class="menu_price">100,- DKK</div>
                         </li>
-
                         <li>
                             <div class="menu_left">
-                                <p>Port Tonic</p>
+                                <p>20 Year Armagnac Domaine Horgelus</p>
                             </div>
-                            <hr class="menu_line">
-                            <div class="menu_price">90,- DKK</div>
-                        </li>
-
-                        <li>
-                            <div class="menu_left">
-                                <p>Moscow Mule</p>
-                            </div>
-                            <hr class="menu_line">
-                            <div class="menu_price">90,- DKK</div>
+                            <hr class="menu_line" />
+                            <div class="menu_price">110,- DKK</div>
                         </li>
 
                         <li>
@@ -120,42 +160,7 @@
                             <div class="menu_price">120,- DKK</div>
                         </li>
 
-                        <li>
-                            <div class="menu_left">
-                                <p>8 Year Armagnac Domaine Horgelus</p>
-                            </div>
-                            <hr class="menu_line">
-                            <div class="menu_price">70,- DKK</div>
-                        </li>
 
-                        <li>
-                            <div class="menu_left">
-                                <p>Gin Hass</p>
-                            </div>
-                            <hr class="menu_line" />
-                            <div class="menu_price">100,- DKK</div>
-                        </li>
-
-                        <li>
-                            <div class="menu_left">
-                                <p>Kir</p>
-                            </div>
-                            <hr class="menu_line" />
-                            <div class="menu_price">90,- DKK</div>
-                        </li>
-
-                        <li>
-                            <div class="menu_left">
-                                <p>Negroni Shagliato</p>
-                            </div>
-                            <hr class="menu_line" />
-                            <div class="menu_price">100,- DKK</div>
-                        </li>
-
-                        <li>
-                            <div class="menu_left">
-                                <p>Port Tonic</p>
-                            </div>
                 </div>
 
                 <!--------------- IMG DRINK -------------->
@@ -168,6 +173,14 @@
                 <h2>Soft drinks</h2>
 
                 <ul>
+
+                    <li>
+                        <div class="menu_left">
+                            <p>Water with or without sparkles</p>
+                        </div>
+                        <hr class="menu_line" />
+                        <div class="menu_price">20,- DKK</div>
+                    </li>
                     <li>
                         <div class="menu_left">
                             <p>Soft drinks -</p>
@@ -176,6 +189,7 @@
                         <hr class="menu_line" />
                         <div class="menu_price">40,- DKK</div>
                     </li>
+
 
                     <li>
                         <div class="menu_left">
@@ -195,20 +209,12 @@
 
                     <li>
                         <div class="menu_left">
-                            <p>Water with or without sparkles</p>
+                            <p>Coffee: ristretto, espresso or lungo</p>
                         </div>
                         <hr class="menu_line" />
-                        <div class="menu_price">20,- DKK</div>
+                        <div class="menu_price">40,- DKK</div>
                     </li>
 
-                    <li>
-                        <div class="menu_left">
-                            <p>Beer 33 cl - Pilsner Classic, Wheat or IPA -</p>
-                            <p class="small_p">From Møns Bryghus, best micro -brewery in Denmark.</p>
-                        </div>
-                        <hr class="menu_line" />
-                        <div class="menu_price">65,- DKK</div>
-                    </li>
 
                     <li>
                         <div class="menu_left">
@@ -220,11 +226,16 @@
 
                     <li>
                         <div class="menu_left">
-                            <p>Coffee: ristretto, espresso or lungo</p>
+                            <p>Beer 33 cl - Pilsner Classic, Wheat or IPA -</p>
+                            <p class="small_p">From Møns Bryghus, best micro -brewery in Denmark.</p>
                         </div>
                         <hr class="menu_line" />
-                        <div class="menu_price">40,- DKK</div>
+                        <div class="menu_price">65,- DKK</div>
                     </li>
+
+
+
+
                 </ul>
             </div>
         </div>
