--- a/drinkskort.html
+++ b/drinkskort.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/svg+xml" href="./img/favicon-2.svg" />
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
         rel="stylesheet" />
@@ -37,9 +38,9 @@
     </header>
     <main>
         <div class="menu_knap_flex">
-            <a class="hvid_knap_menu" href="menukort.html">Wine</a>
-            <a class="hvid_knap_menu" href="madkort.html">Food</a>
-            <a class="hvid_knap_menu" href="drinkskort.html">Drinks & Soft drinks</a>
+            <a class="forside_button" href="menukort.html">Wine</a>
+            <a class="forside_button" href="madkort.html">Food</a>
+            <a class="forside_button" href="drinkskort.html">Drinks & Soft drinks</a>
         </div>
 
         <div class="filter_buttons">
