--- a/events.html
+++ b/events.html
@@ -1,51 +1,58 @@
 <!DOCTYPE html>
 <html lang="da">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="events.css" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Events</title>
-  </head>
-  <body>
-    <header>
-      <a href="index.html">
-        <img src="img/logo.webp" alt="Logo" class="logo" />
-      </a>
-      <nav>
-        <ul class="menu">
-          <li><a href="menukort.html">Menu</a></li>
-          <li><a href="bord.html">Booking</a></li>
-          <li><a href="events.html" class="nav-link active">Events</a></li>
-        </ul>
-        <div class="burger">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
-        </div>
-      </nav>
-    </header>
 
-    <main>
-      <div class="event-intro">
-        <div>
-          <h1>Events</h1>
-          <p>At Chums, we take pride in hosting a variety of events every month and building a like-minded community of wine lovers. We love to give our customers the opportunity to be a part of something more than just another wine bar. So bring a friend or a loved one, and sign up for one of our upcoming events down below.</p>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
+    rel="stylesheet" />
+  <link rel="icon" type="image/svg+xml" href="./img/favicon-2.svg" />
+  <title>Events</title>
+  <link rel="stylesheet" href="events.css" />
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-        <div>
-          <img src="./img/galleri4.webp" alt="billede af folk med vinglas" />
-        </div>
+<body>
+  <header>
+    <a href="index.html">
+      <img src="img/logo.webp" alt="Logo" class="logo" />
+    </a>
+    <nav>
+      <ul class="menu">
+        <li><a href="menukort.html">Menu</a></li>
+        <li><a href="bord.html">Booking</a></li>
+        <li><a href="events.html" class="nav-link active">Events</a></li>
+      </ul>
+      <div class="burger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    <div class="event-intro">
+      <div>
+        <h1>Events</h1>
+        <p>At Chums, we take pride in hosting a variety of events every month and building a like-minded community of
+          wine lovers. We love to give our customers the opportunity to be a part of something more than just another
+          wine bar. So bring a friend or a loved one, and sign up for one of our upcoming events down below.</p>
       </div>
 
-      <article id="events">
-        <!-- <div class="event-produkt">
+      <div>
+        <img src="./img/galleri4.webp" alt="billede af folk med vinglas" />
+      </div>
+    </div>
+
+    <article id="events">
+      <!-- <div class="event-produkt">
           <img src="./img/winetaste.webp" alt="vin smagning event" />
           <h3 class="h3_events">Wine tasting</h3>
           <h4 class="h4_events">December 2025</h4>
@@ -65,50 +72,53 @@
           <h4 class="h4_events">January 2026</h4>
           <p class="p_events">Just us for an intimate live jazz night.</p>
         </div> -->
-      </article>
+    </article>
 
-      <div class="privat-booking">
-        <div class="privat-booking-indhold">
-          <h2>Private wine tasting or reception?</h2>
-          <p>Book a meeting, private wine tasting, gathering, or reception with us. Whether you're planning a relaxed get-together or a special celebration, we create the perfect setting with great wine, warm hospitality, and unforgettable flavors.</p>
-          <button class="booking-knap">Book a request</button>
-        </div>
+    <div class="privat-booking">
+      <div class="privat-booking-indhold">
+        <h2>Private wine tasting or reception?</h2>
+        <p>Book a meeting, private wine tasting, gathering, or reception with us. Whether you're planning a relaxed
+          get-together or a special celebration, we create the perfect setting with great wine, warm hospitality, and
+          unforgettable flavors.</p>
+        <button class="booking-knap">Book a request</button>
+      </div>
+    </div>
+
+    <section class="galleri-container">
+      <img src="./img/galleri1.webp" alt="billede af vin" />
+      <img src="./img/galleri2.webp" alt="billede af to glas vin" />
+      <img src="./img/galleri3.webp" alt="billede af en oste bord" />
+      <img src="./img/galleri4.webp" alt="billede af folk ved et bord med vin" />
+      <img src="./img/galleri5.webp" alt="billede af en intim koncert" />
+      <img src="./img/galleri6.webp" alt="billede af en restaurant" />
+    </section>
+  </main>
+  <footer>
+    <h2>Join our newsletter</h2>
+    <h3>Stay up to date when our january sale goes live, new events and much more!</h3>
+
+    <form class="sign-up">
+      <input type="email" placeholder="Be a part of our wine loving community" class="search-input" id="email" />
+      <button class="sign-up-button">Sign up</button>
+    </form>
+
+    <div class="footer-nederst">
+      <div class="kontakt">
+        <p>Telephone:<a href="tel:+4526234784"> +45 26 23 47 84</a></p>
+        <p>Email: <a href="mailto:christian@chums.dk">christian@chums.dk</a></p>
+        <p>Instagram:<a href="https://www.instagram.com/chums.winebar/"> @chums.winebar</a></p>
+        <p>Facebook:<a href="https://www.facebook.com/Chums.dk">Chums vinbar og bistro </a></p>
       </div>
 
-      <section class="galleri-container">
-        <img src="./img/galleri1.webp" alt="billede af vin" />
-        <img src="./img/galleri2.webp" alt="billede af to glas vin" />
-        <img src="./img/galleri3.webp" alt="billede af en oste bord" />
-        <img src="./img/galleri4.webp" alt="billede af folk ved et bord med vin" />
-        <img src="./img/galleri5.webp" alt="billede af en intim koncert" />
-        <img src="./img/galleri6.webp" alt="billede af en restaurant" />
-      </section>
-    </main>
-    <footer>
-      <h2>Join our newsletter</h2>
-      <h3>Stay up to date when our january sale goes live, new events and much more!</h3>
-
-      <form class="sign-up">
-        <input type="email" placeholder="Be a part of our wine loving community" class="search-input" id="email" />
-        <button class="sign-up-button">Sign up</button>
-      </form>
-
-      <div class="footer-nederst">
-        <div class="kontakt">
-          <p>Telephone:<a href="tel:+4526234784"> +45 26 23 47 84</a></p>
-          <p>Email: <a href="mailto:christian@chums.dk">christian@chums.dk</a></p>
-          <p>Instagram:<a href="https://www.instagram.com/chums.winebar/"> @chums.winebar</a></p>
-          <p>Facebook:<a href="https://www.facebook.com/Chums.dk">Chums vinbar og bistro </a></p>
-        </div>
-
-        <div class="rapport">
-          <img src="./img/smileyrapport.webp" alt="smileyrapport billede" />
-          <p>Smiley rapport</p>
-          <p>© 2025 Chums Vinbar & Bistro</p>
-        </div>
+      <div class="rapport">
+        <img src="./img/smileyrapport.webp" alt="smileyrapport billede" />
+        <p>Smiley rapport</p>
+        <p>© 2025 Chums Vinbar & Bistro</p>
       </div>
-    </footer>
-    <script src="events.js"></script>
-    <script src="menu.js"></script>
-  </body>
+    </div>
+  </footer>
+  <script src="events.js"></script>
+  <script src="menu.js"></script>
+</body>
+
 </html>
